WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55382
DrawingAreaProxyImpl's state ID should be updated whenever its state changes, not just when we send an UpdateState message
https://bugs.webkit.org/show_bug.cgi?id=55382
Summary
DrawingAreaProxyImpl's state ID should be updated whenever its state changes,...
Adam Roben (:aroben)
Reported
2011-02-28 08:23:53 PST
DrawingAreaProxyImpl's state ID should be updated whenever its state changes, not just when we send an UpdateState message
Attachments
Patch
(5.92 KB, patch)
2011-02-28 08:24 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-02-28 08:24:20 PST
Created
attachment 84065
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-02-28 08:36:51 PST
Committed
r79867
: <
http://trac.webkit.org/changeset/79867
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug